--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,14 +2,6 @@
  * Globals
  */
 
-/*
-#container {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-}
-*/
-
 #bg-wrapper {
 	position: fixed;
 	height: 100%;
@@ -68,4 +60,10 @@
   display: flex;
   align-items: center;
   border-radius: 25px;
+}
+
+.social-nav {
+	all: unset;
+	margin: 0 5px;
+	cursor: pointer;
 }
