--- a/src/app/shadow-landing/shadow-landing.component.html
+++ b/src/app/shadow-landing/shadow-landing.component.html
@@ -1,8 +1,8 @@
 <div id="shadow-landing">
 	<div class="sly-dark-panel-alt">
-		<p><span id="type-1" animateOnScroll animationName="expand" style="--n:186">SLY is every kid who disassembled their toy to figure out how it works. SLY is every being brave enough to stand up for the meek. SLY is every being who refuses to accept the status quo.</span></p>
-		<p><span id="type-2" animateOnScroll animationName="expand" style="--n:194">We set information free, yet some call us criminals. We explore, yet some call us criminals. We liberate, yet some call us criminals. Our crime is outsmarting greedy and oppressive corporations.</span></p>
-		<p><span id="type-3" animateOnScroll animationName="expand" style="--n:233">We are hackers. We are freedom fighters. We are smugglers. We are scholars, fighters, engineers, builders, and laborers. You may stop the individual, but the mission is eternal.</span></p>
-		<p><span id="type-4" animateOnScroll animationName="expand" style="--n:77">This is OUR universe!</span></p>
+		<p><span id="type-1" animateOnScroll animationName="type" style="--n:186">SLY is every kid who disassembled their toy to figure out how it works. SLY is every being brave enough to stand up for the meek. SLY is every being who refuses to accept the status quo.</span></p>
+		<p><span id="type-2" animateOnScroll animationName="type" style="--n:194">We set information free, yet some call us criminals. We explore, yet some call us criminals. We liberate, yet some call us criminals. Our crime is outsmarting greedy and oppressive corporations.</span></p>
+		<p><span id="type-3" animateOnScroll animationName="type" style="--n:233">We are hackers. We are freedom fighters. We are smugglers. We are scholars, fighters, engineers, builders, and laborers. You may stop the individual, but the mission is eternal.</span></p>
+		<p><span id="type-4" animateOnScroll animationName="type" style="--n:77">This is OUR universe!</span></p>
 	</div>
 </div>
