--- a/src/app/tool-sage/tool-sage.component.css
+++ b/src/app/tool-sage/tool-sage.component.css
@@ -1,3 +1,14 @@
+#cardWrapper {
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	text-align: center;
+	width: 100%;
+}
+
 #tableWrapper {
   display: block;
   width: 100%;
