--- a/src/app/tool-sage/tool-sage.component.html
+++ b/src/app/tool-sage/tool-sage.component.html
@@ -1,3 +1,46 @@
+<div id="cardWrapper">
+	<div class="sly-card-alt">
+		<div class="sly-card-alt-content">
+			<div class="sly-card-alt-header">
+				<h3>24hr Ammo</h3>
+			</div>
+			<div class="sly-card-alt-body">
+				<p>{{dispAmmoTotal}}</p>
+			</div>
+		</div>
+	</div>
+	<div class="sly-card-alt">
+		<div class="sly-card-alt-content">
+			<div class="sly-card-alt-header">
+				<h3>24hr Food</h3>
+			</div>
+			<div class="sly-card-alt-body">
+				<p>{{dispFoodTotal}}</p>
+			</div>
+		</div>
+	</div>
+	<div class="sly-card-alt">
+		<div class="sly-card-alt-content">
+			<div class="sly-card-alt-header">
+				<h3>24hr Fuel</h3>
+			</div>
+			<div class="sly-card-alt-body">
+				<p>{{dispFuelTotal}}</p>
+			</div>
+		</div>
+	</div>
+	<div class="sly-card-alt">
+		<div class="sly-card-alt-content">
+			<div class="sly-card-alt-header">
+				<h3>24hr Tool</h3>
+			</div>
+			<div class="sly-card-alt-body">
+				<p>{{dispToolTotal}}</p>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="filter-header">
   <mat-form-field>
     <input matInput (keyup)="applyFilter($event)" placeholder="Search">
@@ -16,9 +59,23 @@
 		<th mat-header-cell *matHeaderCellDef mat-sort-header> Total Prizes </th>
 		<td mat-cell *matCellDef="let element"> {{element.pzCnt}} </td>
 	  </ng-container>
+	  
+	  <ng-container matColumnDef="dailyPzCnt">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header> 24hr R4 </th>
+		<td mat-cell *matCellDef="let element">
+			<div *ngIf="element.dailyPzCnt"><strong>Tier Total: {{element.dailyPzCnt && element.dailyPzCnt.tierCnt ? element.dailyPzCnt.tierCnt : ''}}</strong></div>
+			<div *ngFor="let pzItem of element.dailyPzCnt | keyvalue;">
+				<ng-container *ngIf="pzItem.key != 'tierCnt'">
+					{{pzItem.key}}: {{pzItem.value}}
+				</ng-container>
+			</div>
+		</td>
+	  </ng-container>
 	 
 	  <ng-container *ngFor="let disCol of displayedPrizeColumns; let colIndex = index" matColumnDef="{{disCol}}">
-		<th mat-header-cell *matHeaderCellDef mat-sort-header> {{disCol}} </th>
+		<th mat-header-cell *matHeaderCellDef mat-sort-header> {{
+			disCol == 'common' ? 'Copper' : disCol == 'uncommon' ? 'Bronze' : disCol == 'rare' ? 'Silver' : disCol == 'epic' ? 'Gold' : disCol == 'legendary' ? 'Platinum' : 'Diamond'
+		}} </th>
 		<td mat-cell *matCellDef="let element">
 			<div *ngIf="element[disCol]"><strong>Tier Total: {{element[disCol] && element[disCol].tierCnt ? element[disCol].tierCnt : ''}}</strong></div>
 			<div *ngFor="let pzItem of element[disCol] | keyvalue;">
